--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Robert Peery</title>
@@ -25,7 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Rob Peery</h1>
-								<p> I am a Senior currently working towards my Bachelor of Science in Information Science at the University of Colorado. I've always loved stories statistics can tell and love to work to find more. You can find more about me and the past and future work I've done on this site.   </p>
+								<p> I am changing this as a test. I am a Senior currently working towards my Bachelor of Science in Information Science at the University of Colorado. I've always loved stories statistics can tell and love to work to find more. You can find more about me and the past and future work I've done on this site.   </p>
 							</div>
 						</div>
 						<nav>
@@ -55,8 +50,6 @@
 								<h2 class="major">Work</h2>
 								<div class='tableauPlaceholder' id='viz1602559078722' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;EverySongonSpotify&#47;Sheet3&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EverySongonSpotify&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;EverySongonSpotify&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1602559078722');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 								<p></p>
-								<p> Research on NFL fan behavior specifically on Reddit:</p>
-								<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSo6xL7RsroHkXWRHiC8rhWEatCdJtmn4V81hR6bah44EOyAS_aBZz_MyHJNnDtCqYbcYxF8kjpLtv2/embed?start=false&loop=false&delayms=2000" frameborder="0" width="700" height="422" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 							</article>
 
 						<!-- About -->
