--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Rob Peery</h1>
-								<p> I am changing this as a test. I am a Senior currently working towards my Bachelor of Science in Information Science at the University of Colorado. I've always loved stories statistics can tell and love to work to find more. You can find more about me and the past and future work I've done on this site.   </p>
+								<p> I am a Senior currently working towards my Bachelor of Science in Information Science at the University of Colorado. I've always loved stories statistics can tell and love to work to find more. You can find more about me and the past and future work I've done on this site.   </p>
 							</div>
 						</div>
 						<nav>
